# libserialport

./: CMakeLists.txt  config.h.in  libserialport.h  libserialport_internal.h  linux_termios.h
cmake/Modules/: CheckType.cmake
